# pydgraph

./: .gitignore  README.md  pyproject.toml
pydgraph/proto/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
scripts/: protogen.sh
