[project]
name = "pydgraph_unofficial"
version = "0.1.0"
description = "This is the fork from the official Dgraph database client implementation for Python (Python >= v2.7 and >= v3.5), using gRPC."
authors = [
    {name = "Nikola Makedonski", email = "n.makedonski@gmail.com"},
]
dependencies = [
    "grpcio>=1.51.1",
    "grpcio-tools>=1.51.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
interpreter = [
    "qtconsole>=5.4.0",
]
